overflow-fix?

--- a/client/src/views/background/background.scss
+++ b/client/src/views/background/background.scss
@@ -1,4 +1,5 @@
 .back {
+    overflow-x: hidden;
     .bg {
         position: absolute;
         height: 100%;
